# pyzzle

./: .gitignore  LICENSE  README.md  cloudbuild.yaml  main.py  main_cline.py  meson.build  puzzle_generator.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: github-deploy.yml  python-publish.yml
dict/: aomori.txt  birds.txt  cats.txt  chiba.txt  color.txt  countries.txt  ehime.txt  englishword-adjective-adverb-secondgrade.txt  englishword-adjective-firstgrade.txt  englishword-adjective-thirdgrade.txt  englishword-adverb-firstgrade.txt  englishword-adverb-thirdgrade.txt  englishword-conjunction-thirdgrade.txt  englishword-verb-firstgrade.txt  englishword-verb-thirdgrade.txt  fukishima.txt  fukuoka.txt  gunma.txt  hiroshima.txt  hyogo.txt  instrument(japanese).txt  ishikawa.txt  kanagawa.txt  kochi.txt  kumamoto.txt  logo.txt  mie.txt  nara.txt  nigata.txt  okayama.txt  ooita.txt  pokemon_kanto.txt  pokemon_ww.txt  prefectures.txt  r10000.txt  r100000.txt  residents-doumori.txt  s_and_p100.txt  saga.txt  shiga.txt  (+4 more)
docs/: example_basic.html  index.html  is_placeable.md
example/: analysis.py  example_basic.ipynb  fmain.py  format_data.py  main.py  main_cli.py  post_twitter.py  puzzle_generator.py  solve_skelton.py  test.json
example/json/: MakePuzz_Season1.json  Pyzzle_w15_h15_ep1_seed0.json  Pyzzle_w15_h15_ep3_seed0.json  elements_35.json  hokkaido_w44_h42_ep10_seed0.json  hokkaido_w44_h42_ep500_seed5.json  logo_w15_h15_ep1000_seed5.json  logo_w15_h15_ep10_seed0.json  logo_w15_h15_ep500_seed2147483648.json  logo_w15_h15_ep5_seed5.json  logo_w44_h42_ep10_seed0.json  pokemon_w15_h15_ep5_seed5.json  pokemon_w15_h15_r1.json  pokemon_w15_h15_r5.json  pokemon_w47_h24_ep50_seed5.json  pokemon_w47_h24_ep5_seed5.json  v004sample.json  v005sample.json
example/pickle/: logo_w15_h15_ep500_seed2147483648.pickle
playground/: .dio  standard.ipynb
pyzzle/: Dictionary.py  FancyPuzzle.py  FuncyPuzzle.py  Gravity.py  History.py  Judgement.py  Mask.py  ObjectiveFunction.py  Optimizer.py  Placeable.py  Puzzle.py  PyzzleAPI.py  Word.py  __init__.py  utils.py
pyzzle/Puzzle/: Puzzle.py  __init__.py  add_to_limit.f90
pyzzle/dict/: animals.txt  dict.json  elements.txt  englishword-noun-secondgrade.txt  englishword-noun-thirdgrade.txt  englishword-pronoun-firstgrade.txt  englishword-verb-secondgrade.txt  fishes.txt  gihu.txt  hokkaido-population_ww.txt  instrument_english.txt  iwate.txt  kyoto.txt  nagano.txt  nagasaki.txt  national_capital_japanese.txt  nikoli105.txt  nikoli106.txt  r10000.txt  sake.txt  tochigi.txt  tottori.txt  yamanashi.txt
pyzzle/tests/: test_Puzzle.py  test_benchmark.py  test_dictionary.py  test_objective_function.py  test_placeable.py  test_puzzle.py  test_utils.py
script/: ipynbpy2py.py  movie_maker.py
scripts/: .gitignore  ipynbpy2py.py  mask_maker.py  txt2json.py
src/pyzzle/: Dictionary.py  Exception.py  Gravity.py  Mask.py  Optimizer.py  (+8 more)
test/: test_Puzzle.py
tests/: test_dictionary.py  test_futils.py  test_puzzle.py  test_utils.py
(+34 files in other folders)
